--- a/nation-nya/src/App.css
+++ b/nation-nya/src/App.css
@@ -4,46 +4,63 @@ body{
 }
 
 h1 {
-  margin-top: 50px;
   text-align: center;
 }
 
-#nav-home {
+nav {
   width: 100%;
-  display: flex;
-  position: absolute;
+  height: 50px;
   background-color: #202020;
-  z-index: 40;
+  display: block;
+  /* display: list-item; */
+}
+
+#nav-ul {
+  margin: 0;
+  padding: 0;
+}
+#nav-text {
+  float: left;
+  margin: 0;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-bottom: 10px;
+  font-size: 20px;
+  width: 12%;
+  list-style: none;
+  text-align: center;
+  color: #fff;
+  white-space: nowrap;
+}
+#nav-a {
+  color: #fff;
+  text-decoration: none;
 }
 
 #nav-title {
-  color: #fff;
-  margin: auto 20px auto 40px;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 40px;
-
-}
-
-#nav-list {
   float: left;
+  margin: 0;
+  padding-top: 5px;
+  padding-right: 40px;
+  padding-bottom: 10px;
+  font-size: 30px;
+  width: 12%;
   list-style: none;
-  margin-left: 30px;
-  font-size: 20px;
-}
-
-#nav-list a {
-  color: #fff;
-  text-decoration: none;
-}
-
-#block {
-  margin-top: 40px;
-}
-
-#form{
   text-align: center;
+  color: #fff;
+  white-space: nowrap;
 }
-#form-nome {
-  resize: none;
+
+#nav-menssagens {
+  float: left;
+  margin: 0;
+  padding-top: 10px;
+  padding-left: 40px;
+  padding-bottom: 10px;
+  font-size: 20px;
+  width: 12%;
+  list-style: none;
+  text-align: center;
+  color: #fff;
+  white-space: nowrap;
 }
